momento/src/commands/custom_role/snapshots/display_resource_management_rule_with_all_permissions.snap
---
source: momento/src/commands/custom_role/display.rs
expression: rule.to_string()
---
- Resource Management:
  Resources: all
  Allowed actions: Read, Write, List
