momento/src/commands/custom_role/snapshots/display_role_with_empty_rules.snap
---
source: momento/src/commands/custom_role/display.rs
expression: role.to_string()
---
Name: Limited
ID: r-limited
Description: role with limited permissions
Permissions: (none)
Conditions:
- Allowed IPs:
  10.1.2.3/32
  5.4.3.2/24
