momento/src/commands/custom_role/snapshots/display_role_with_super_user_permissions.snap
---
source: momento/src/commands/custom_role/display.rs
expression: role.to_string()
---
Name: Owner
ID: r-owner (system role)
Description: superuser role
Permissions: super user
