momento/src/commands/custom_role/snapshots/display_store_rule_with_all_permissions.snap
---
source: momento/src/commands/custom_role/display.rs
expression: rule.to_string()
---
- Object Stores (all)
  Keys: all
  Allowed actions: Read, Write, List
