momento/src/commands/custom_role/snapshots/display_store_rule_with_name_permissions.snap
---
source: momento/src/commands/custom_role/display.rs
expression: rule.to_string()
---
- Object Store: user-prefs
  Key: schema-version
  Allowed actions: Read, Write, List
