momento/src/commands/custom_role/snapshots/display_topic_rule_with_all_permissions.snap
---
source: momento/src/commands/custom_role/display.rs
expression: rule.to_string()
---
- Topics (all)
  In Serverless Caches: all
  Allowed actions: Read, Write, List
