momento/src/commands/custom_role/snapshots/display_topic_rule_with_name_permissions.snap
---
source: momento/src/commands/custom_role/display.rs
expression: rule.to_string()
---
- Topic: announcements
  In Serverless Cache: chat-app
  Allowed actions: Read
