momento/src/commands/custom_role/snapshots/display_topic_rule_with_prefix_permissions.snap
---
source: momento/src/commands/custom_role/display.rs
expression: rule.to_string()
---
- Topics with prefix: room-
  In Serverless Caches: all
  Allowed actions: Write
